<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <import type="android.view.View"/>
        <variable name="profile" type="com.google.resumemaker.entity.Profile" />
        <variable name="fragment" type="com.google.resumemaker.ui.profile.EditProfileFragment" />
    </data>

    <ScrollView
        android:id="@+id/edit_profile_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/edit_profile_wrapper_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_15dp"
            tools:context=".ui.profile.EditProfileFragment">

            <LinearLayout
                android:id="@+id/edit_first_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/padding_5dp"
                android:layout_marginBottom="@dimen/padding_5dp">

                <TextView
                    android:id="@+id/edit_first_name_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_first_name" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/first_name_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/first_name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        app:error="@{profile.firstName == null ? @string/data_not_set : null}"
                        android:text="@={profile.firstName}"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/edit_last_name_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/padding_5dp"
                android:layout_marginBottom="@dimen/padding_5dp">

                <TextView
                    android:id="@+id/edit_last_name_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_last_name"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/last_name_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/last_name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        app:error="@{profile.lastName == null ? @string/data_not_set : null}"
                        android:text="@={profile.lastName}"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/edit_dob_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/padding_5dp"
                android:layout_marginBottom="@dimen/padding_5dp">

                <TextView
                    android:id="@+id/edit_dob_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_dob"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/dob_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/dob_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:enabled="false"
                        android:text="@={profile.dob}"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/set_date_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{(view) -> fragment.onSelectNewDateClick(view)}"
                android:text="@string/select_new_date"/>

            <LinearLayout
                android:id="@+id/edit_email_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/padding_5dp"
                android:layout_marginBottom="@dimen/padding_5dp">

                <TextView
                    android:id="@+id/edit_email_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_email"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:imeOptions="actionNext"
                        app:error="@{profile.email == null ? @string/data_not_set : null}"
                        android:text="@={profile.email}"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/edit_position_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginTop="@dimen/padding_5dp"
                android:layout_marginBottom="@dimen/padding_5dp">

                <TextView
                    android:id="@+id/edit_position_header"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/edit_target_position"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/position_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/position_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        android:text="@={profile.targetPosition}"/>

                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:orientation="horizontal">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/save_profile_button"
                    android:tag="@string/save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_5dp"
                    android:onClick="@{(view) -> fragment.onEditFormButtonClick(view)}"
                    android:src="@drawable/ic_save"/>

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/cancel_edit_button"
                    android:tag="@string/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/margin_5dp"
                    android:onClick="@{(view) -> fragment.onEditFormButtonClick(view)}"
                    android:src="@drawable/ic_cancel"/>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</layout>
