...

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/edit_profile_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_15dp"
            android:layout_gravity="end"
            android:onClick="@{(view) -> fragment.onEditButtonClick()}"
            android:src="@drawable/ic_edit"/>
...
                                android:layout_marginBottom="@dimen/margin_5dp"
                                android:text="@string/first_name"
                                android:textStyle="bold"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/first_name_text_view"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@{profile.firstName != null ? profile.firstName : @string/data_not_set}"
                                android:textSize="16sp" />

                        </LinearLayout>
...
