<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_resume"
            android:contentDescription="@string/resume"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_profile"
            android:contentDescription="@string/menu_profile"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/nav_positions"
            android:icon="@drawable/ic_positions"
            android:contentDescription="@string/menu_position"
            android:title="@string/menu_position" />
        <item
            android:id="@+id/nav_education"
            android:icon="@drawable/ic_edu"
            android:contentDescription="@string/menu_education"
            android:title="@string/menu_education" />

    </group>

</menu>
